--- a/cfg/Giveup_Clash.ini
+++ b/cfg/Giveup_Clash.ini
@@ -1,11 +1,11 @@
 [custom]
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
-ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Direct_Classical.yaml,28800
+ruleset=🚀 手动选择,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Proxy_Classical.yaml,28800
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
 ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Steam_CDN_Classical.yaml,28800
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Steam_CDN_Classical.yaml,28800
 ruleset=🎯 全球直连,[]GEOSITE,category-game-platforms-download
 ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
 ruleset=💬 即时通讯,[]GEOSITE,category-communication
